--- a/example/leaflet.html
+++ b/example/leaflet.html
@@ -4,12 +4,12 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <title></title>
-        <link rel="stylesheet" type="text/css" href="http://service.ihned.cz/js/tooltip/v1.1.2.css" />
-        <link rel="stylesheet" href="http://service.ihned.cz/js/leaflet/v0.6.4.css" />
-        <script src='http://service.ihned.cz/js/jquery.min.js'></script>
-        <script src='http://service.ihned.cz/js/leaflet/v0.6.4.js'></script>
-        <script src='http://service.ihned.cz/js/leaflet/utfgrid.min.js'></script>
-        <script src="http://service.ihned.cz/js/tooltip/v1.1.2.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://service.ihned.cz/js/tooltip/v1.1.2.css" />
+        <link rel="stylesheet" href="https://service.ihned.cz/js/leaflet/v0.6.4.css" />
+        <script src='https://service.ihned.cz/js/jquery.min.js'></script>
+        <script src='https://service.ihned.cz/js/leaflet/v0.6.4.js'></script>
+        <script src='https://service.ihned.cz/js/leaflet/utfgrid.min.js'></script>
+        <script src="https://service.ihned.cz/js/tooltip/v1.1.2.min.js"></script>
         <style>
             #map {
                 position: absolute;
